--- a/dev-assets/index.html
+++ b/dev-assets/index.html
@@ -1,6 +1,13 @@
 <head>
-  <script src="/bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/document-register-element/1.5.0/document-register-element.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.8/react-with-addons.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.8/react-dom.js"></script>
+
 </head>
 <body>
-  <p>Hallo</p>
+  <h1>Web React Components</h1>
+  <div id="root"></div>
+
+  <!-- compiled JS -->
+  <script src="/bundle.js"></script>
 </body>
