move code to testpage and use proper est6 class

--- a/dev-assets/index.html
+++ b/dev-assets/index.html
@@ -10,4 +10,13 @@
 
   <!-- compiled JS -->
   <script src="/bundle.js"></script>
+  <script>
+// bootstrap element
+const MyButton = props => {
+  console.log(props);
+  return React.createElement('button', {}, ['Assi'])
+};
+
+ReactDOM.render(React.createElement(MyButton, {}, []), document.getElementById('root'));
+  </script>
 </body>
