change name of global export and public API

--- a/dev-assets/index.html
+++ b/dev-assets/index.html
@@ -33,7 +33,7 @@
       );
 
     // register react component as custom element
-    WRC.default(MyComponent, 'my-component');
+    WebReactComponents.register(MyComponent, 'my-component');
   </script>
 
   <!-- render the custom element -->
