--- a/dev-assets/index.html
+++ b/dev-assets/index.html
@@ -20,11 +20,12 @@
       children,
       age = 'unknown',
       fruits = [],
-      onclickbutton = Function.prototype,
+      onClickButton = Function.prototype,
+      fooBar = Function.prototype,
     } = {}) =>
       h('div', null,
-        h('h1', null, name),
-        h('button', { onClick: onclickbutton }, 'Click me!'),
+        h('h1', { onMouseOver: () => fooBar('baz') }, name),
+        h('button', { onClick: () => onClickButton({ num: 1 }) }, 'Click me!'),
         h('p', null, 'Age: ' + age),
         children && h('div', { style }, children),
         h('ul', null, fruits.map((fruit, key) =>
@@ -33,7 +34,10 @@
       );
 
     // register react component as custom element
-    WebReactComponents.register(MyComponent, 'my-component');
+    WebReactComponents.register(MyComponent, 'my-component', {
+      attributes: ['name', 'age', 'fruits'],
+      events: ['onClickButton', 'fooBar'],
+    });
   </script>
 
   <!-- render the custom element -->
@@ -41,16 +45,19 @@
     id="myComponent"
     name="Peter"
     age="45"
-    fruits="apple,orange,banana"
+    fruits='["apple","orange","banana"]'
     onclickbutton="console.log('attribute callback `onclickbutton` triggered')"
   >
     I'm a <em>native</em> child
   </my-component>
 
   <script>
-    document.getElementById('myComponent')
-      .addEventListener('clickbutton', () => {
-        console.log('Event `clickbutton` triggered')
-      });
+    const myComponent = document.getElementById('myComponent');
+    myComponent.addEventListener('clickbutton', (e) => {
+      console.log('Event `clickbutton` triggered', e)
+    });
+    myComponent.addEventListener('foobar', (e) => {
+      console.log('Event `foobar` triggered', e)
+    });
   </script>
 </body>
