--- a/dev-assets/index.html
+++ b/dev-assets/index.html
@@ -20,7 +20,9 @@
     id="myComponent"
     name="Peter"
     age="45"
-    fruits='["apple","orange","banana"]'
+    fruits="apple,orange,banana"
+    config='{"foo":42,"bar":true,"baz":"qux"}'
+    isActive
     onClickButton="console.log('attribute callback `onclickbutton` triggered', this)"
   >
     I'm a <em>native</em> child
@@ -35,23 +37,42 @@
       const children = props.children;
       const age = props.age || 'unknown';
       const fruits = props.fruits || [];
+      const isActive = props.isActive || false;
+      const config = props.config || {};
       const onClickButton = props.onClickButton || Function.prototype;
       const onHoverName = props.onHoverName || Function.prototype;
       return h('div', null,
         h('h1', { onMouseOver: function() { return onHoverName(name); }  }, name),
         h('button', { onClick: onClickButton }, 'Click me!'),
         h('p', null, 'Age: ' + age),
+        h('p', null, 'isActive: ' + isActive),
         children && h('div', { style: style }, children),
+        h('h2', null, 'Fruits'),
         h('ul', null, fruits.map(function(fruit, key) {
           return h('li', { key: key }, fruit)
+        })),
+        h('h2', null, 'Config'),
+        h('dl', null, Object.keys(config).map(function(name) {
+          return [
+            h('dt', null, name),
+            h('dd', null, config[name].toString()),
+          ];
         }))
       );
     }
 
     // register react component as custom element
     WebReactComponents.register(MyComponent, 'my-component', {
-      attributes: ['name', 'age', 'fruits'],
-      events: ['onClickButton', 'onHoverName'],
+      name: String,
+      age: Number,
+      fruits: {
+        serialize: (arr) => arr ? arr.join(',') : '',
+        deserialize: (str) => str ? str.split(',') : [],
+      },
+      config: JSON,
+      isActive: Boolean,
+      onClickButton: Function,
+      onHoverName: Function,
     });
 
     // add some DOM Level 3 event handlers
@@ -63,6 +84,8 @@
       console.log('Event `onHoverName` triggered', e)
     });
     c.name = 'Fritz';
-    c.innerHTML = 'Overwritten with <em>innerHTML</em> w00t';
+    c.innerHTML = 'Overwritten with <em>innerHTML<' + '/em> w00t';
+    c.fruits = ['strawberry', 'grape'];
+    c.isActive = false;
   </script>
 </body>
