implement review comment and use util functions

--- a/dev-assets/index.html
+++ b/dev-assets/index.html
@@ -29,11 +29,11 @@
   </my-component>
 
   <my-component2
-    id='"myComponent2"'
-    name='"Peter"'
-    age='45'
+    id="myComponent2"
+    name="Peter"
+    age="46"
     fruits='["apple","orange","banana"]'
-    isActive='true'
+    isActive="true"
     onClickButton="console.log('attribute callback `onclickbutton` triggered', this)"
   >
     I'm a <em>native</em> child
